@@ -1,0 +1,6 @@
+;<!-- $Id$ -->
+
+<h3>Updating templates</h3>
+If you have theme files for node-view-$viewname of comment-view-$viewname you have
+to convert them to node--view--$viewname or comment--view--$viewname.
+
