@@ -166,8 +166,8 @@ title = "Embedding a view into other parts of your site"
 title = "What's new in Views 2"
 weight = -42
 
-[updating]
-title = "Updating your views from Views 1 to Views 2"
+[upgrading]
+title = "Upgrading your Views from Drupal 6 to Drupal 7"
 
 ; API related
 [api]
@@ -195,7 +195,7 @@ weight = -40
 parent = api
 
 [api-upgrading]
-title = "Upgrading to Drupal 7"
+title = "Upgrading to Drupal 7 (API)"
 parent = api
 
 [api-example]
